# GuLinux-Commons

./: .gitignore  .gitmodules  CMakeLists.txt  GuLinux-Commons.kdev4  compositeresource.cpp  compositeresource.h  compositeresource_p.h  cookieslawdisclaimer.cpp  cookieslawdisclaimer.h  dbmigrationmanager.cpp  dbmigrationmanager.h  dbmigrationmanager_p.h  json_object.cpp  json_object.h  migratedbo.cpp  migratedbo.h  migratedbo_p.h  quitresource.cpp  quitresource.h  quitresource_p.h  wform.cpp  wform.h  wglyphicon.cpp  whtmltemplateslocalizedstrings.cpp  whtmltemplateslocalizedstrings.h  wt_helpers.h  wt_utils.h
Arduino/: Arduino.cmake  Makefile.in.sample
Arduino/GuLinux-Arduino-Utils/: blink_led.h  singleton.h
CImg/: cimg_histogram.h
Qt/: CMakeLists.txt  benchmark.h  functional.cpp  functional.h  qlambdaevent.cpp  qlambdaevent.h  qt_functional.cpp  qt_functional.h  strings.h  zoomableimage.cpp  zoomableimage.h
Qt/tests/: CMakeLists.txt  thread_testing.cpp
Wt/: CMakeLists.txt  compositeresource.cpp  compositeresource.h  compositeresource_p.h  migratedbo.cpp  migratedbo.h  migratedbo_p.h  quitresource.cpp  quitresource.h  quitresource_p.h  wform.cpp  wform.h  wglyphicon.h  whtmltemplateslocalizedstrings.cpp  whtmltemplateslocalizedstrings.h  whtmltxt.cpp  whtmltxt.h  wobjectscope.h  wserverconfigurationreader.cpp  wserverconfigurationreader.h  wtr.cpp  wtr.h
Wt/tests/: CMakeLists.txt  json_object_test.cpp  wt_utils_test.cpp
c++/: CMakeLists.txt  backtrace.cpp  backtrace.h  c++.kdev4  containers_streams.h  demangle.cpp  demangle.h  dptr.h  optional.h  settings.cpp  settings.h  stlutils.h  stringbuilder.h
c++/.kdev4/: c++.kdev4
c++/tests/: CMakeLists.txt  stlutils_test.cpp  test_containers_streams.cpp  test_optional.cpp
cmake/: FindCImg.cmake  FindGraphicsMagick.cmake  FindImageMagick.cmake  FindMagick.cmake  FindWt.cmake  add_gtest.cmake
python/: travis_find_latest_github_pr.py  travis_release.py
shell/: CMakeLists.txt
shell/bash-ci/: CMakeLists.txt  bash-ci
shell/utilities/: CMakeLists.txt  arduino_resource2header.py  cless  cp2klipper  ctail  docker-manager  ff-concat  ff-cut-video  ff-thumbnailer  fftimelapse  fxload-qhyiii290  gitco-pvt  gulinux-bashrc-utils.sh  indi_helper  lifecam_exposure  newbash  nginx-conf  nmcli-prio  password-digits  qj  rmdirs  ssh_connect_loop  ssh_view_screenshot  tomp4  watchpage
tests/: CMakeLists.txt  json_object_test.cpp  wt_utils_test.cpp
