cmake_minimum_required(VERSION 2.8.11)
project(GuLinux-Commons-c++)
enable_testing()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(Boost REQUIRED)
find_package(GTest)
add_library(GuLinux_c++_Commons STATIC settings.cpp)
if(GTEST_FOUND)
  add_subdirectory(tests)
endif(GTEST_FOUND)